--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {Mine Çetinkaya-Rundel},
   year = {2020},
   note = {R package version 0.1.0},
-  url = {https://CRAN.R-project.org/package=airports},
+  url = {https://github.com/OpenIntroStat/airports},
 }
 
 @Manual{R-base,
@@ -18,8 +18,8 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 0.22},
+  year = {2022},
+  note = {R package version 0.31},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
@@ -28,30 +28,30 @@
   author = {Mine Çetinkaya-Rundel},
   year = {2020},
   note = {R package version 0.1.0},
-  url = {https://CRAN.R-project.org/package=cherryblossom},
+  url = {https://github.com/OpenIntroStat/cherryblossom},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2021},
-  note = {R package version 1.0.7},
+  year = {2022},
+  note = {R package version 1.0.10},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 0.5.1},
+  year = {2022},
+  note = {R package version 0.5.2},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2020},
-  note = {R package version 3.3.3},
+  year = {2022},
+  note = {R package version 3.3.6},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
@@ -74,26 +74,26 @@
 @Manual{R-infer,
   title = {infer: Tidy Statistical Inference},
   author = {Andrew Bray and Chester Ismay and Evgeni Chasnovski and Ben Baumer and Mine Cetinkaya-Rundel},
-  year = {2021},
-  note = {R package version 0.5.4},
+  year = {2020},
+  note = {R package version 0.5.3},
   url = {https://CRAN.R-project.org/package=infer},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2020},
-  note = {R package version 1.29},
-  url = {https://CRAN.R-project.org/package=knitr},
+  year = {2021},
+  note = {R package version 1.36},
+  url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-openintro,
-  title = {openintro: Data Sets and Supplemental Functions from 'OpenIntro' Textbooks
+  title = {openintro: Data Sets and Supplemental Functions from OpenIntro Textbooks
 and Labs},
   author = {Mine Çetinkaya-Rundel and David Diez and Andrew Bray and Albert Kim and Ben Baumer and Chester Ismay and Christopher Barr},
   year = {2020},
   note = {R package version 2.0.0},
-  url = {https://CRAN.R-project.org/package=openintro},
+  url = {https://github.com/OpenIntroStat/openintro},
 }
 
 @Manual{R-purrr,
@@ -106,9 +106,9 @@ and Labs},
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {R package version 1.4.0},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.1.3},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -116,7 +116,7 @@ and Labs},
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2022},
-  note = {R package version 2.16},
+  note = {R package version 2.14},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -131,24 +131,24 @@ and Labs},
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2021},
-  note = {R package version 3.1.2},
+  year = {2022},
+  note = {R package version 3.1.8},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.1.3},
+  author = {Hadley Wickham and Maximilian Girlich},
+  year = {2022},
+  note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+  title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.3.1},
+  year = {2022},
+  note = {R package version 1.3.2},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
@@ -156,9 +156,9 @@ and Labs},
   title = {tinytex: Helper Functions to Install and Maintain TeX Live, and Compile
 LaTeX Documents},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 0.32},
-  url = {https://CRAN.R-project.org/package=tinytex},
+  year = {2022},
+  note = {R package version 0.40},
+  url = {https://github.com/rstudio/tinytex},
 }
 
 @Manual{R-usdata,
@@ -166,16 +166,16 @@ LaTeX Documents},
   author = {Mine Çetinkaya-Rundel and David Diez},
   year = {2020},
   note = {R package version 0.1.0},
-  url = {https://CRAN.R-project.org/package=usdata},
+  url = {https://github.com/OpenIntroStat/usdata},
 }
 
 @Manual{R-webexercises,
-  title = {webexercises: Create Interactive Web Exercises in 'R Markdown' (Formerly
-'webex')},
+  title = {webexercises: Create Interactive Web Exercises in R Markdown (Formerly
+webex)},
   author = {Dale Barr and Lisa DeBruine},
   year = {2021},
   note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=webexercises},
+  url = {https://github.com/psyteachr/webexercises},
 }
 
 @Book{bookdown2016,
@@ -258,6 +258,6 @@ LaTeX Documents},
   volumne = {40},
   number = {1},
   pages = {30--32},
-  url = {http://tug.org/TUGboat/Contents/contents40-1.html},
+  url = {https://tug.org/TUGboat/Contents/contents40-1.html},
 }
 
