--- a/index.Rmd
+++ b/index.Rmd
@@ -52,6 +52,12 @@ knitr::include_graphics("images/linear_regression.jpg")
 
 This lab will introduce the concept of modelling data using simple linear regression (SLR). 
 
+In this lab you will use the `tidyverse` package. On the lab PCs, open R Studio, create a new R Script and save this file. Now copy/paste/run the following lines of code in your R Script file in RStudio to load the library for this session:
+
+```{r load-packages, eval = FALSE}
+library(tidyverse)
+```
+
 The key idea behind SLR is to attempt to explore a relationship between an:
 
 * **Outcome/response** variable $y$, and an
