--- a/packages.bib
+++ b/packages.bib
@@ -11,7 +11,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2019},
   url = {https://www.R-project.org/},
 }
 
@@ -19,7 +19,7 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2022},
-  note = {R package version 0.31},
+  note = {R package version 0.30},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
@@ -35,7 +35,7 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2022},
-  note = {R package version 1.0.10},
+  note = {R package version 1.0.9},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -66,34 +66,34 @@
 @Manual{R-HistData,
   title = {HistData: Data Sets from the History of Statistics and Data Visualization},
   author = {Michael Friendly},
-  year = {2020},
-  note = {R package version 0.8-6},
+  year = {2021},
+  note = {R package version 0.8-7},
   url = {https://CRAN.R-project.org/package=HistData},
 }
 
 @Manual{R-infer,
   title = {infer: Tidy Statistical Inference},
-  author = {Andrew Bray and Chester Ismay and Evgeni Chasnovski and Ben Baumer and Mine Cetinkaya-Rundel},
-  year = {2020},
-  note = {R package version 0.5.3},
+  author = {Andrew Bray and Chester Ismay and Evgeni Chasnovski and Simon Couch and Ben Baumer and Mine Cetinkaya-Rundel},
+  year = {2022},
+  note = {R package version 1.0.4},
   url = {https://CRAN.R-project.org/package=infer},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 1.36},
+  year = {2022},
+  note = {R package version 1.41},
   url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-openintro,
   title = {openintro: Data Sets and Supplemental Functions from OpenIntro Textbooks
 and Labs},
-  author = {Mine Çetinkaya-Rundel and David Diez and Andrew Bray and Albert Kim and Ben Baumer and Chester Ismay and Christopher Barr},
-  year = {2020},
-  note = {R package version 2.0.0},
-  url = {https://github.com/OpenIntroStat/openintro},
+  author = {Mine Çetinkaya-Rundel and David Diez and Andrew Bray and Albert Y. Kim and Ben Baumer and Chester Ismay and Nick Paterno and Christopher Barr},
+  year = {2022},
+  note = {R package version 2.4.0},
+  url = {https://CRAN.R-project.org/package=openintro},
 }
 
 @Manual{R-purrr,
@@ -116,15 +116,15 @@ and Labs},
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2022},
-  note = {R package version 2.14},
+  note = {R package version 2.18},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.4.0},
+  year = {2022},
+  note = {R package version 1.4.1},
   url = {https://CRAN.R-project.org/package=stringr},
 }
 
@@ -140,7 +140,7 @@ and Labs},
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham and Maximilian Girlich},
   year = {2022},
-  note = {R package version 1.2.0},
+  note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
@@ -157,15 +157,15 @@ and Labs},
 LaTeX Documents},
   author = {Yihui Xie},
   year = {2022},
-  note = {R package version 0.40},
+  note = {R package version 0.42},
   url = {https://github.com/rstudio/tinytex},
 }
 
 @Manual{R-usdata,
   title = {usdata: Data on the States and Counties of the United States},
-  author = {Mine Çetinkaya-Rundel and David Diez},
-  year = {2020},
-  note = {R package version 0.1.0},
+  author = {Mine Çetinkaya-Rundel and David Diez and Leah Dorazio},
+  year = {2021},
+  note = {R package version 0.2.0},
   url = {https://github.com/OpenIntroStat/usdata},
 }
 
@@ -195,6 +195,17 @@ webex)},
   year = {2016},
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
+}
+
+@Article{infer2021,
+  title = {{infer}: An {R} package for tidyverse-friendly statistical inference},
+  author = {Simon P. Couch and Andrew P. Bray and Chester Ismay and Evgeni Chasnovski and Benjamin S. Baumer and Mine Çetinkaya-Rundel},
+  journal = {Journal of Open Source Software},
+  year = {2021},
+  volume = {6},
+  number = {65},
+  pages = {3661},
+  doi = {10.21105/joss.03661},
 }
 
 @Book{knitr2015,
@@ -255,7 +266,7 @@ webex)},
   author = {Yihui Xie},
   journal = {TUGboat},
   year = {2019},
-  volumne = {40},
+  volume = {40},
   number = {1},
   pages = {30--32},
   url = {https://tug.org/TUGboat/Contents/contents40-1.html},
