--- a/01-part1.Rmd
+++ b/01-part1.Rmd
@@ -40,12 +40,13 @@ The variables we'll consider are:
 
 
 ## Loading the Data {-}
-
-You may download the dataset named `mlb11.csv` file from our Moodle course page. Once the file has downloaded, **save it in the same folder** as the `R` script file you created and saved for this lab. You should now set your working directory to this location by clicking `Session > Set Working Directory > To Source File Location`. You can load the data set into your workspace by running the code below. 
+The data to be analyzed are saved in a `.csv` file called `mlb11.csv` which can be imported using the following code.
 
 ```{r import-data-optional, echo=TRUE, warnings=FALSE, message=FALSE}
-mlb11 <- read.csv("mlb11.csv")
+mlb11 <- read.csv(url("https://raw.githubusercontent.com/Glasgow-Stats-L1-L2/S1Z_Lab3/main/mlb11.csv"))
 ```
+
+You may download the dataset named `mlb11.csv` file from our Moodle course page. Once the file has downloaded, **save it in the same folder** as the `R` script file you created and saved for this lab. You should now set your working directory to this location by clicking `Session > Set Working Directory > To Source File Location`. You can load the data set into your workspace by running `mlb11 <- read.csv("mlb11.csv")`. 
 
 First of all, it is always a good idea to look at the dataset you are working with to get a good sense of what it looks like, and the different types of data you may have, e.g. categorical or numerical. Recall, the dataset is called `mlb11`.
 
